--- a/m9.ipynb
+++ b/m9.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "m9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyObA0hrgpr4WUnbnoarMPQa",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOSVHq0HQ5eKpSxoPBqR5Hx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +45,7 @@
         "print('Lima data teratas: ')\n",
         "dataset.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,17 +177,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309
+          "height": 197
         },
         "id": "IfTNg8a0QGOp",
-        "outputId": "510e6764-3165-4d44-a500-183fb8b6497a"
+        "outputId": "5d74046e-b10b-4224-ee7a-63d6149b88bd"
       },
       "source": [
         "import datetime\n",
-        "dataset['order_month'] = dataset['order_date'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%d\").strftime('%Y-%m'))\n",
+        "dataset[['order_month']=='2019-12'] = dataset['order_date'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%d\").strftime('%Y-%m'))\n",
         "dataset.head()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,6 +221,8 @@
               "      <th>quantity</th>\n",
               "      <th>item_price</th>\n",
               "      <th>order_month</th>\n",
+              "      <th>gmv</th>\n",
+              "      <th>False</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -235,6 +238,8 @@
               "      <td>10</td>\n",
               "      <td>740000</td>\n",
               "      <td>2019-10</td>\n",
+              "      <td>7400000</td>\n",
+              "      <td>2019-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -247,6 +252,8 @@
               "      <td>BRAND_R</td>\n",
               "      <td>2</td>\n",
               "      <td>604000</td>\n",
+              "      <td>2019-10</td>\n",
+              "      <td>1208000</td>\n",
               "      <td>2019-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -261,6 +268,8 @@
               "      <td>8</td>\n",
               "      <td>1045000</td>\n",
               "      <td>2019-11</td>\n",
+              "      <td>8360000</td>\n",
+              "      <td>2019-11</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -273,6 +282,8 @@
               "      <td>BRAND_A</td>\n",
               "      <td>4</td>\n",
               "      <td>205000</td>\n",
+              "      <td>2019-08</td>\n",
+              "      <td>820000</td>\n",
               "      <td>2019-08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -287,26 +298,28 @@
               "      <td>2</td>\n",
               "      <td>4475000</td>\n",
               "      <td>2019-10</td>\n",
+              "      <td>8950000</td>\n",
+              "      <td>2019-10</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   order_id  order_date  customer_id  ... quantity item_price order_month\n",
-              "0   1703458  2019-10-17        14004  ...       10     740000     2019-10\n",
-              "1   1706815  2019-10-24        17220  ...        2     604000     2019-10\n",
-              "2   1710718  2019-11-03        16518  ...        8    1045000     2019-11\n",
-              "3   1683592  2019-08-19        16364  ...        4     205000     2019-08\n",
-              "4   1702573  2019-10-16        15696  ...        2    4475000     2019-10\n",
+              "   order_id  order_date  customer_id  ... order_month      gmv    False\n",
+              "0   1703458  2019-10-17        14004  ...     2019-10  7400000  2019-10\n",
+              "1   1706815  2019-10-24        17220  ...     2019-10  1208000  2019-10\n",
+              "2   1710718  2019-11-03        16518  ...     2019-11  8360000  2019-11\n",
+              "3   1683592  2019-08-19        16364  ...     2019-08   820000  2019-08\n",
+              "4   1702573  2019-10-16        15696  ...     2019-10  8950000  2019-10\n",
               "\n",
-              "[5 rows x 10 columns]"
+              "[5 rows x 12 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 33
         }
       ]
     },
@@ -315,10 +328,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 360
+          "height": 251
         },
         "id": "jAkONlOkRM55",
-        "outputId": "57d7cb45-ad1b-4e60-8f57-0317d15c0c52"
+        "outputId": "a1c096c5-b051-432e-93a0-168fbcc865aa"
       },
       "source": [
         "dataset['gmv'] = dataset['item_price']*dataset['quantity']\n",
@@ -326,12 +339,12 @@
         "print('Lima data teratas: ')\n",
         "dataset.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Ukuran dataset : 5000 baris dan 11 kolom \n",
+            "Ukuran dataset : 5000 baris dan 12 kolom \n",
             "\n",
             "Lima data teratas: \n"
           ],
@@ -370,6 +383,7 @@
               "      <th>item_price</th>\n",
               "      <th>order_month</th>\n",
               "      <th>gmv</th>\n",
+              "      <th>False</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -386,6 +400,7 @@
               "      <td>740000</td>\n",
               "      <td>2019-10</td>\n",
               "      <td>7400000</td>\n",
+              "      <td>2019-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -400,6 +415,7 @@
               "      <td>604000</td>\n",
               "      <td>2019-10</td>\n",
               "      <td>1208000</td>\n",
+              "      <td>2019-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -414,6 +430,7 @@
               "      <td>1045000</td>\n",
               "      <td>2019-11</td>\n",
               "      <td>8360000</td>\n",
+              "      <td>2019-11</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -428,6 +445,7 @@
               "      <td>205000</td>\n",
               "      <td>2019-08</td>\n",
               "      <td>820000</td>\n",
+              "      <td>2019-08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -442,26 +460,27 @@
               "      <td>4475000</td>\n",
               "      <td>2019-10</td>\n",
               "      <td>8950000</td>\n",
+              "      <td>2019-10</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   order_id  order_date  customer_id  ... item_price order_month      gmv\n",
-              "0   1703458  2019-10-17        14004  ...     740000     2019-10  7400000\n",
-              "1   1706815  2019-10-24        17220  ...     604000     2019-10  1208000\n",
-              "2   1710718  2019-11-03        16518  ...    1045000     2019-11  8360000\n",
-              "3   1683592  2019-08-19        16364  ...     205000     2019-08   820000\n",
-              "4   1702573  2019-10-16        15696  ...    4475000     2019-10  8950000\n",
+              "   order_id  order_date  customer_id  ... order_month      gmv    False\n",
+              "0   1703458  2019-10-17        14004  ...     2019-10  7400000  2019-10\n",
+              "1   1706815  2019-10-24        17220  ...     2019-10  1208000  2019-10\n",
+              "2   1710718  2019-11-03        16518  ...     2019-11  8360000  2019-11\n",
+              "3   1683592  2019-08-19        16364  ...     2019-08   820000  2019-08\n",
+              "4   1702573  2019-10-16        15696  ...     2019-10  8950000  2019-10\n",
               "\n",
-              "[5 rows x 11 columns]"
+              "[5 rows x 12 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 34
         }
       ]
     },
@@ -470,16 +489,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 227
         },
         "id": "QDM45hmFR0UJ",
-        "outputId": "ae427e0c-4c8d-44ee-8bd1-b4b5b4c28bfa"
+        "outputId": "1116e328-feb1-40a0-aa9a-af1e067b4260"
       },
       "source": [
-        "monthly_amount = dataset.groupby('order_month')['gmv'].sum().reset_index()\n",
+        "monthly_amount = dataset.groupby('order_date'=='2019-12')['gmv'].sum().reset_index()\n",
         "monthly_amount"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +522,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>order_month</th>\n",
+              "      <th>False</th>\n",
               "      <th>gmv</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -543,19 +562,19 @@
               "</div>"
             ],
             "text/plain": [
-              "  order_month         gmv\n",
-              "0     2019-07  3524041000\n",
-              "1     2019-08  4452923000\n",
-              "2     2019-09  3947002000\n",
-              "3     2019-10  6719937000\n",
-              "4     2019-11  6182229000\n",
-              "5     2019-12  8148235000"
+              "     False         gmv\n",
+              "0  2019-07  3524041000\n",
+              "1  2019-08  4452923000\n",
+              "2  2019-09  3947002000\n",
+              "3  2019-10  6719937000\n",
+              "4  2019-11  6182229000\n",
+              "5  2019-12  8148235000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 39
         }
       ]
     },
@@ -567,17 +586,17 @@
           "height": 312
         },
         "id": "sstKo0MaS-H6",
-        "outputId": "70e5008c-f790-4294-d229-780067439a3c"
+        "outputId": "e1ef2c1e-9014-4b5a-9a0b-132962b98553"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "plt.plot(monthly_amount['order_month'], monthly_amount['gmv'])\n",
+        "plt.plot(monthly_amount['order_date'=='2019-12'], monthly_amount['gmv'])\n",
         "plt.title('Monthly GMV Year 2019')\n",
         "plt.xlabel('Order Month')\n",
         "plt.ylabel('Total GMV')\n",
         "plt.show"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +608,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 41
         },
         {
           "output_type": "display_data",
